monitoring/infra/dcgm-exporter-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dcgm-exporter
  namespace: monitoring
  labels:
    app: dcgm-exporter
spec:
  selector:
    matchLabels:
      app: dcgm-exporter
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dcgm-exporter
    spec:
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu
                operator: Exists
      priorityClassName: "system-node-critical"
      containers:
      - name: dcgm-exporter
        image: nvcr.io/nvidia/k8s/dcgm-exporter:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: metrics
          containerPort: 9400
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: true
          privileged: true
          capabilities:
            add:
            - SYS_ADMIN
            - DAC_OVERRIDE
            drop:
            - ALL
        volumeMounts:
        - name: dcgm-proc
          mountPath: /host/proc
          readOnly: true
        - name: dcgm-sys
          mountPath: /host/sys
          readOnly: true
        - name: dcgm-dev
          mountPath: /host/dev
          readOnly: true
        - name: dcgm-run
          mountPath: /host/run
          readOnly: true
      volumes:
      - name: dcgm-proc
        hostPath:
          path: /proc
      - name: dcgm-sys
        hostPath:
          path: /sys
      - name: dcgm-dev
        hostPath:
          path: /dev
      - name: dcgm-run
        hostPath:
          path: /run
      hostNetwork: false
      hostPID: false
